Edit profile now works.
- The user can now edit his or her profile.

- The user cannot change the user name.

- The password is not available to edit yet.

- Small fixes.

- Edit dish fixed, now is available for the admin.

--- a/TREC/src/main/resources/templates/add_food.html
+++ b/TREC/src/main/resources/templates/add_food.html
@@ -70,6 +70,7 @@
 						  	<div class="form-group">
 						    	<input class="btn btn-primary" type="submit" value="Añadir plato"/>
 						    	<input type="hidden" name="_csrf" value="{{token}}"/>
+						    	<input class="btn btn-secondary" value="Cancelar" type="reset">
 						 	</div>
 						</div>
 					</div>
