--- a/TREC/src/main/resources/templates/cart.html
+++ b/TREC/src/main/resources/templates/cart.html
@@ -47,10 +47,10 @@
                             <div class="row">
                             
 									{{#image}}
- 										<img src="/dishes/{{id}}/image" width=“200” height=“150”>
+ 										<img src="/dishes/{{id}}/image" style="width:400px;height:300px;">
  									{{/image}}			    
 					    			{{^image}}
-										<img src="/images/drink-6.jpg" width=“200” height=“150”>
+										<img src="/images/drink-6.jpg" style="width:400px;height:300px;">
 									{{/image}}
 									
                                 <div class="col-xs-4 col-md-4">
