--- a/TREC/src/main/resources/templates/purchase.html
+++ b/TREC/src/main/resources/templates/purchase.html
@@ -19,25 +19,25 @@
 	<div class="container text-center" id="render">
 		<table class="table table-bordered table-dark table-sm">
 			<thead><tr>
-				<th colspan="4">Datos de facturación</th>
+				<th colspan="6">Datos de facturación</th>
 			</tr></thead>
 			<tbody>
 				<tr>
-					<td><b>Nombre</b></td>
+					<td colspan="2"><b>Nombre</b></td>
 					<td>{{purchase.firstName}}</td>
-					<td><b>Apellidos</b></td>
+					<td colspan="2"><b>Apellidos</b></td>
 					<td>{{purchase.surname}}</td>
 				</tr>
 				<tr>
-					<td><b>Dirección</b></td>
+					<td colspan="2"><b>Dirección</b></td>
 					<td>{{purchase.address}}</td>
-					<td><b>Código Postal</b></td>
+					<td colspan="2"><b>Código Postal</b></td>
 					<td>{{purchase.postalCode}}</td>
 				</tr>
 				<tr>
-					<td><b>Ciudad</b></td>
+					<td colspan="2"><b>Ciudad</b></td>
 					<td>{{purchase.city}}</td>
-					<td><b>País</b></td>
+					<td colspan="2"><b>País</b></td>
 					<td>{{purchase.country}}</td>
 				</tr>
 			</tbody>
@@ -45,13 +45,13 @@
 		<br>
 		<table class="table table-striped table-dark table-sm text-center">
 		<thead><tr>
-			<th scope="col">Producto</th>
+			<th scope="col" colspan="4">Producto</th>
 			<th scope="col">Importe</th>
 		</tr></thead>
 			<tbody>
 			{{#purchase.dishes}}
 			<tr>
-				<td>{{name}}</td>
+				<td colspan="4">{{name}}</td>
 				<td>{{dishPrice}}</td>
 			</tr>
 			{{/purchase.dishes}}
