--- a/TREC/src/main/resources/templates/menu.html
+++ b/TREC/src/main/resources/templates/menu.html
@@ -39,7 +39,7 @@
  							<div class="menu-img img" style="background-image: url(/dishes/{{id}}/image);"></div>
  							{{/image}}			    
 					    	{{^image}}
-							<div class="menu-img img" style="background-image: url(/images/drink-6.jpg);"></div>
+							<div class="menu-img img" style="background-image: url(/images/no_image.png);"></div>
 							{{/image}}
 							
 							<div class="text">
@@ -87,7 +87,7 @@
  							<div class="menu-img img" style="background-image: url(/dishes/{{id}}/image);"></div>
  							{{/image}}			    
 					    	{{^image}}
-							<div class="menu-img img" style="background-image: url(images/drink-6.jpg);"></div>
+							<div class="menu-img img" style="background-image: url(/images/no_image.png);"></div>
 							{{/image}}
 							
 							<div class="text">
@@ -135,7 +135,7 @@
  							<div class="menu-img img" style="background-image: url(/dishes/{{id}}/image);"></div>
  							{{/image}}			    
 					    	{{^image}}
-							<div class="menu-img img" style="background-image: url(images/drink-6.jpg);"></div>
+							<div class="menu-img img" style="background-image: url(/images/no_image.png);"></div>
 							{{/image}}
 							
 							<div class="text">
