--- a/TREC/src/main/resources/templates/pay.html
+++ b/TREC/src/main/resources/templates/pay.html
@@ -134,7 +134,7 @@
                         </li>
                     </ul>-->
                     <div class="col-xs-9 col-md-8">
-                        <h4 class="text-right">Total a pagar: <strong>50.00</strong></h4>
+                        <h4 class="text-right">Total a pagar: <strong>{{price}}€</strong></h4>
                     </div>
                     <br>
                     <a href="/pay" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
