--- a/TREC/src/main/resources/templates/editdish.html
+++ b/TREC/src/main/resources/templates/editdish.html
@@ -30,7 +30,7 @@
 		    <label>Ingredientes: </label>
 		    <select name="lista" id="ingredients" multiple>
 				{{#dish.ingredients}}
-	 			<option value={{id}}>{{name}}</option>
+	 			<option value={{id}} selected>{{name}}</option>
 	  			{{/dish.ingredients}}
 			</select>
 		  </div>
