--- a/TREC/src/main/resources/templates/paydone.html
+++ b/TREC/src/main/resources/templates/paydone.html
@@ -19,15 +19,17 @@
   <div class="container">
       <div class="row">
           <div class="col-lg-5">
-              <img src="/images/error.png">
+              <img src="/images/compra.jpg">
           </div>
+          
           <div class="col-lg-7">
-              <center><h2>Tu comida llegará lo antes posible.</h2>
-              <p>Atentamente, TuRestauranteEnCasa</p>
-              <p><a href="/index" class="btn btn-primary">PÁGINA PRINCIPAL</a></p>
-              </div></center>
-          </div> 
-      </div>
+          	<br>
+          	<br>
+            <center><h2>Tu comida llegará lo antes posible.</h2>
+            <p>Atentamente, TuRestauranteEnCasa</p>
+            <p><a href="/index" class="btn btn-primary">PÁGINA PRINCIPAL</a></p>
+          </div></center>
+      </div> 
   </div>
 </section>
 {{>footer}}
