--- a/TREC/src/main/resources/templates/team.html
+++ b/TREC/src/main/resources/templates/team.html
@@ -28,7 +28,7 @@
 			<div class="row">
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="staff">
-						<div class="img" style="background-image: url(images/chef-4.jpg);"></div>
+						<div class="img" style="background-image: url(/images/chef-4.jpg);"></div>
 						<div class="text px-4 pt-2">
 							<h3>Javier Méndez</h3>
 							<span class="position mb-2">Fundador</span>
@@ -46,7 +46,7 @@
 				</div>
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="staff">
-						<div class="img" style="background-image: url(images/chef-2.jpg);"></div>
+						<div class="img" style="background-image: url(/images/chef-2.jpg);"></div>
 						<div class="text px-4 pt-2">
 							<h3>Azahara Andújar</h3>
 							<span class="position mb-2">Fundador</span>
@@ -64,7 +64,7 @@
 				</div>
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="staff">
-						<div class="img" style="background-image: url(images/chef-3.jpg);"></div>
+						<div class="img" style="background-image: url(/images/chef-3.jpg);"></div>
 						<div class="text px-4 pt-2">
 							<h3>David Herrera</h3>
 							<span class="position mb-2">Fundador</span>
@@ -82,7 +82,7 @@
 				</div>
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="staff">
-						<div class="img" style="background-image: url(images/chef-1.jpg);"></div>
+						<div class="img" style="background-image: url(/images/chef-1.jpg);"></div>
 						<div class="text px-4 pt-2">
 							<h3>David Mestanza</h3>
 							<span class="position mb-2">Fundador</span>
