Security finished and fixes in editdish.
- Now admin cant access to normal user pages and normal users cant access to admin pages.

- Normal users can only access to his or her purchases, not other user's purchases.

- Edit dish fixed.

- Revised code things that we dont use.

--- a/TREC/src/main/resources/templates/editdish.html
+++ b/TREC/src/main/resources/templates/editdish.html
@@ -29,9 +29,9 @@
 		  <div>
 		    <label>Ingredientes: </label>
 		    <select name="lista" id="ingredients" multiple>
-				{{#dish.ingredients}}
+				{{#ingredients}}
 	 			<option value={{id}} selected>{{name}}</option>
-	  			{{/dish.ingredients}}
+	  			{{/ingredients}}
 			</select>
 		  </div>
 		  <div class="form-group">
@@ -42,10 +42,10 @@
 	  		<option value="Cena">Cena</option>
 			</select>
 		 </div>
-		 <div class="form-group">
-			<label class="col-md control-label">Precio:</label>
-			<div class="col-md-8">
-			<input class="form-control" value="{{dish.dishPrice}}" type="text" name='dishPrice' placeholder="{{dish.dishPrice}}"/>
+		 <div>
+			<label>Precio:</label>
+			<div>
+			<input value="{{dish.dishPrice}}" type="text" name='dishPrice' placeholder="{{dish.dishPrice}}"/>
 			</div>
 		</div>
 		  <p>Imagen del plato: </p>
