--- a/TREC/src/main/resources/templates/footer.html
+++ b/TREC/src/main/resources/templates/footer.html
@@ -62,4 +62,5 @@
 	<script src="/js/purify.min.js"></script>
 	<script src="/js/jspdf.umd.min.js"></script>
 	<script src="/js/topdf.js"></script>
+	<script src="/js/profile.js"></script>
 </html>
