--- a/TREC/src/main/resources/templates/profile.html
+++ b/TREC/src/main/resources/templates/profile.html
@@ -206,13 +206,13 @@
 					var config = {
 					type: 'line',
 					data: {
-						labels: [{{#adminpurchases}}{{id}},{{/adminpurchases}}],
+						labels: [{{#graficpurchases}}{{id}},{{/graficpurchases}}],
 						datasets: [{
 							label: 'Precio por pedido',
 							backgroundColor: window.chartColors.red,
 							borderColor: window.chartColors.red,
 							data: [
-								{{#adminpurchases}}{{price}},{{/adminpurchases}}
+								{{#graficpurchases}}{{price}},{{/graficpurchases}}
 							],
 							fill: false,
 						}]
