Fixed access to the database
-Now we just select the colums of the purchases that we need to view the grafic, before we used to take all the pruchases from the database and that's not nice.

--- a/TREC/src/main/resources/templates/profile.html
+++ b/TREC/src/main/resources/templates/profile.html
@@ -206,13 +206,13 @@
 					var config = {
 					type: 'line',
 					data: {
-						labels: [{{#graficpurchases}}{{id}},{{/graficpurchases}}],
+						labels: [{{#graficid}}{{.}},{{/graficid}}],
 						datasets: [{
 							label: 'Precio por pedido',
 							backgroundColor: window.chartColors.red,
 							borderColor: window.chartColors.red,
 							data: [
-								{{#graficpurchases}}{{price}},{{/graficpurchases}}
+								{{#graficprice}}{{.}},{{/graficprice}}
 							],
 							fill: false,
 						}]
