--- a/backend/src/main/resources/templates/add_food.html
+++ b/backend/src/main/resources/templates/add_food.html
@@ -62,7 +62,7 @@
 								</select>
 							</div>
 							<div class="form-group">
-								<label class="col-md control-label">Imagen del plato:</label>
+								<label class="col-md control-label">Imagen del plato(.jpg):</label>
 								<div class="col-md-8">
 									<input type='file' name='imageField' accept=".jpg, .jpeg, .png" class="text-center center-block well well-sm"/>
 								</div>
@@ -100,7 +100,7 @@
 								<label class="col-md-3 control-label"></label>
 								<div class="col-md-8">
 								  	<div class="form-group">
-								    	<input class="btn btn-primary" type="submit" value="Añadir plato"/>
+								    	<input class="btn btn-primary" type="submit" value="Añadir ingrediente"/>
 								 	</div>
 								 	<input type="hidden" name="_csrf" value="{{token}}"/>
 									<input class="btn btn-secondary" value="Cancelar" type="reset">
