--- a/backend/src/main/resources/templates/profile.html
+++ b/backend/src/main/resources/templates/profile.html
@@ -151,7 +151,7 @@
 					<h1 class="page-header">Facturas</h1>
 					<br>
 					{{#logged}}
-<!-- 					PARTE DEL ADMIN -->
+<!-- 					ADMIN -->
 						{{#admin}}
 							<div id="userPurchases">
 								{{#adminpurchases}}
@@ -159,7 +159,7 @@
 								{{/adminpurchases}}
 							</div>
 							{{^isadminempty}}
-							<button type="button" class="btn btn-primary" id="moreContentButton" onclick="moreContentAdmin()">
+								<button type="button" class="btn btn-primary" id="moreContentButton" onclick="moreContentAdmin()">
 								<span class="spinner-border spinner-border-sm" id="moreContentSpinner" role="status" aria-hidden="true" style="display: none"></span>
 								<span id="moreContentText">Cargar más...</span></button>
 							{{/isadminempty}}
@@ -169,7 +169,7 @@
 							{{/adminpurchases}}
 						{{/admin}}
 						
-<!-- 					PARTE DEL USUARIO NORMAL -->						
+<!-- 					NORMAL USER -->						
 						{{^admin}}
 							<div id="userPurchases">
 								{{#purchases}}
