--- a/frontend/sample-project-phase4/src/app/app.component.html
+++ b/frontend/sample-project-phase4/src/app/app.component.html
@@ -1,17 +1,100 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+<div class="wrap">
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-12 col-md d-flex align-items-center">
+            </div>
+            <div *ngIf="!loginService.isLogged(); else registered" class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
+                <a [routerLink]="['/register']" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
+            </div>
+            <ng-template #registered>
+                <div class="col-8 col-md-2 d-flex justify-content-md-end btn-group">
+                    <form (click)="loginService.logOut()" method="post">
+                        <input class="btn btn-primary btn-sm" type="submit" value="Cerrar sesión"/>
+                        <!-- <input type="hidden" name="_csrf" value="{{token}}"/> -->
+                    </form>
+                </div>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-        <div class="navbar-nav mr-auto">
-            <a class="navbar-brand" href="/">Library</a>
+                <div *ngIf="loginService.isAdmin()" class="col-4 col-md-1 d-flex justify-content-md-end btn-group">
+                    <a href="/cart" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                        <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                    </svg></a>
+                </div>
+            </ng-template>
         </div>
-
-        <login></login>
     </div>
+</div>
 
+<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+    <div class="container">
+        <a [routerLink]="['/index']"><img [src]="imgLogo" style="border: 1px solid rgba(0, 0, 0, 0);background-color: rgba(255, 0, 0, 0)"; height="64" width="64" class="logo img-circle img-thumbnail" alt="logo"></a>
+        <a class="navbar-brand" [routerLink]="['/index']">Tu Restaurante<span> en Casa</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="oi oi-menu"></span> Menú
+        </button>
+        
+        <div class="collapse navbar-collapse" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a [routerLink]="['/index']" class="nav-link">Principal</a></li>
+                <li class="nav-item"><a [routerLink]="['/team']" class="nav-link">Equipo</a></li>
+                <li class="nav-item"><a [routerLink]="['/cart']" class="nav-link">Carta</a></li>
+                <li class="nav-item"><a [routerLink]="['/contact']" class="nav-link">Contacto</a></li>
+                <li *ngIf="loginService.isLogged()" class="nav-item"><a href="/profile/{{userId}}" class="nav-link" content="text-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                  </svg></a></li>
+            </ul>
+        </div>
+        <!-- OLD NO LOGGED
+        <div class="collapse navbar-collapse" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="/index" class="nav-link">Principal</a></li>
+                <li class="nav-item"><a href="/team" class="nav-link">Equipo</a></li>
+                <li class="nav-item"><a href="/menu" class="nav-link">Carta</a></li>
+                <li class="nav-item"><a href="/contact" class="nav-link">Contacto</a></li>
+            </ul>
+        </div> -->
+    </div>
 </nav>
-
 
 <div class="container">
     <router-outlet></router-outlet>
 </div>
+
+<footer class="ftco-footer ftco-no-pb ftco-section" Style="background-image:url('../assets/images/bg_8.jpg')">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md-6 col-lg-6">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
+                    <p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
+                    <p>Gracias a Tu Restaurante en Casa podras acceder a la mejor variedad de comida sin tener que salir de casa.</p>
+                    <p>¿Te animas?</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Horario</h2>
+                    <ul class="list-unstyled open-hours">
+                        <li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
+                        <li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
+                        <li class="d-flex"><span>Miercoles</span><span>10:00 - 22:00</span></li>
+                        <li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
+                        <li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
+                        <li class="d-flex"><span>Sabado</span><span>10:00 - 22:00</span></li>
+                        <li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid px-0 bg-primary py-3">
+        <div class="row no-gutters">
+            <div class="col-md-12 text-center">
+
+                <p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                </div>
+            </div>
+        </div>
+</footer>		
