--- a/frontend/sample-project-phase4/src/app/app.component.html
+++ b/frontend/sample-project-phase4/src/app/app.component.html
@@ -1,47 +1,19 @@
-<div>
-    <login></login>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <div class="navbar-nav mr-auto">
+            <a class="navbar-brand" href="/">Library</a>
+        </div>
+
+        <login></login>
+    </div>
+
+</nav>
 
 
 <div class="container">
     <router-outlet></router-outlet>
 </div>
 
-<footer class="ftco-footer ftco-no-pb ftco-section" Style="background-image:url('../assets/images/bg_8.jpg')">
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-md-6 col-lg-6">
-                <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
-                    <p>Si no puedes llegar al restaurante... ¡Haz que el restaurante llegue a ti!</p>
-                    <p>Gracias a Tu Restaurante en Casa podras acceder a la mejor variedad de comida sin tener que salir de casa.</p>
-                    <p>¿Te animas?</p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6">
-                <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Horario</h2>
-                    <ul class="list-unstyled open-hours">
-                        <li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
-                        <li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
-                        <li class="d-flex"><span>Miercoles</span><span>10:00 - 22:00</span></li>
-                        <li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
-                        <li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
-                        <li class="d-flex"><span>Sabado</span><span>10:00 - 22:00</span></li>
-                        <li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid px-0 bg-primary py-3">
-        <div class="row no-gutters">
-            <div class="col-md-12 text-center">
-
-                <p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                </div>
-            </div>
-        </div>
-</footer>		
+		
