--- a/frontend/sample-project-phase4/src/app/app.component.html
+++ b/frontend/sample-project-phase4/src/app/app.component.html
@@ -5,12 +5,11 @@
         <div class="navbar-nav mr-auto">
             <a class="navbar-brand" href="/">Library</a>
         </div>
-
+        <button></button>
         <login></login>
     </div>
 
 </nav>
-
 
 <div class="container">
     <router-outlet></router-outlet>
