First template adaptation
- CSS and JS assets added
- app.component and index.component revised and fixed

--- a/frontend/sample-project-phase4/src/styles.css
+++ b/frontend/sample-project-phase4/src/styles.css
@@ -9613,7 +9613,7 @@
   .mfp-with-zoom .mfp-container,
   .mfp-with-zoom.mfp-bg {
     opacity: 0;
-    -webkit-backface-visibility: hidden;
+    /* -webkit-backface-visibility: hidden; */
     -webkit-transition: all 0.3s ease-out;
     -moz-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
