--- a/frontend/sample-project-phase4/src/app/app.component.html
+++ b/frontend/sample-project-phase4/src/app/app.component.html
@@ -21,7 +21,7 @@
                         <!-- <input type="hidden" name="_csrf" value="{{token}}"/> -->
                     </div>
                     <div *ngIf="!loginService.isAdmin()" class="col-4 col-md-1 d-flex justify-content-md-end btn-group">
-                        <a href="/cart" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                        <a [routerLink]="['/cart']" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
                             <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
                         </svg></a>
                     </div>
@@ -42,7 +42,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a [routerLink]="['/index']" class="nav-link">Principal</a></li>
                 <li class="nav-item"><a [routerLink]="['/team']" class="nav-link">Equipo</a></li>
-                <li class="nav-item"><a [routerLink]="['/cart']" class="nav-link">Carta</a></li>
+                <li class="nav-item"><a [routerLink]="['/dishes']" class="nav-link">Carta</a></li>
                 <li class="nav-item"><a [routerLink]="['/contact']" class="nav-link">Contacto</a></li>
                 <li *ngIf="loginService.isLogged()" class="nav-item"><a [routerLink]="['/profile/{{currentUser.id}}']" class="nav-link" content="text-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
